# RoboCleaner

./: CMakeLists.txt  package.xml  readme.md  readme.txt
launch/: drive_to_basket.launch  find_objects.launch  pick_up_object.launch  robocleaner_united.launch
src/: DriveHandler.cpp  ObjectsDetector.cpp  ObjectsHandler.cpp  PickPlaceManager.cpp
