<?xml version="1.0"?>
<package>
  <name>robocleaner</name>
  <version>0.0.0</version>
  <description>The robocleaner package</description>

  <maintainer email="maayocohen@gmail.com">Maayan Cohen</maintainer>

  <license>BSD</license>


<build_depend>message_generation</build_depend>
<run_depend>message_runtime</run_depend>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>ar_track_alvar</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>kdl_parser</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_depend>gazebo</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>moveit_ros_planning</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>ar_track_alvar</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf_conversions</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>kdl_parser</run_depend>
    <run_depend>trajectory_msgs</run_depend>

    <run_depend>gazebo_ros</run_depend>
    <run_depend>gazebo</run_depend>


<!--
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>moveit</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>moveit</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
-->

  <export>
  </export>

</package>
